samples/_failures_safe/1761558989_b53ed7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3fb63709.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_3fb63709.c:129:13: error: expected expression at end of input
  129 |             for (int j =
      |             ^~~
./samples/SAFE/__tmp_3fb63709.c:129:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3fb63709.c:129:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3fb63709.c:129:13: error: expected declaration or statement at end of input
